# iroh-socks5-proxy

./: .gitignore  Cargo.toml  LICENSE  README.md  test_persistence.py
src/: lib.rs  main.rs
src/connection/: logger.rs  manager.rs  mod.rs
src/http/: parser.rs
src/socks5/: mod.rs  protocol.rs  server.rs
src/tls/: sni.rs
src/tunnel/: connection.rs  handler.rs  mod.rs  persistence.rs  protocol.rs  relay.rs  socks.rs  state.rs
src/utils/: logging.rs  mod.rs
