[package]
name = "iroh-socks5-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "1.3"
chrono = "0.4"
clap = { version = "4.5.52", features = ["derive"] }
iroh = "0.95.1"
iroh-blobs = "0.97.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.9"

[[bin]]
name = "tunnel"
path = "src/main.rs"
